welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: Int does not take parameters
    for (cpt3<-0 to T.length() -1) {
                            ^Array1:22: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for (cpt1 <-0 to getMondeHauteur() -1) {
            ^